# dsgit

./: .dsgitignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: base.rs  commit.rs  data.rs  diff.rs  entry.rs  lib.rs  main.rs  reference.rs
tests/: commit.rs  data.rs  diff.rs  entry.rs  reference.rs
tests/common/: mod.rs
tests/test_files/: dogs.txt
