[package]
name = "dsgit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
sha-1 = "0.9.4"
hex = "0.4.3"
serial_test = "0.5.1"
walkdir = "2.3.2"
similar = { version = "2.1.0", features = ["inline"] }
console = "0.14.0"
